k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: oasisforsaken/eventseat-frontend:latest
          ports:
            - containerPort: 3000 # <--- ต้องเป็น 3000 ตามที่แอป Next.js รัน
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # เปลี่ยนเป็น ClusterIP ก็ได้ถ้าใช้ Ingress อยู่แล้ว แต่ LoadBalancer ก็ใช้ได้ครับ
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # <--- ทางเข้าจาก Ingress (ต้องตรงกับที่เขียนใน ingress.yaml)
      targetPort: 3000 # <--- ทางออกไปหา Pod (ต้องตรงกับ containerPort)
