k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # บรรทัดนี้สำคัญมาก! เพื่อให้ Cert-Manager รู้ว่าต้องมาจัดการใบเซอร์ให้
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - event-seat.elitefund.fun
      secretName: frontend-tls # ชื่อนี้จะเป็นชื่อ Secret ที่เก็บใบเซอร์
  rules:
    - host: event-seat.elitefund.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
